--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SmartX Cluster Installer</title>
+    <title>Sunmao-UI: a framework for building your low-code platform.</title>
     <style>
       #root,
       .App {
